--- a/index.ipynb
+++ b/index.ipynb
@@ -73,17 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ecc import S256Point, Signature\n",
     "from helper import double_sha256\n",
@@ -95,12 +87,9 @@
     "z = int.from_bytes(double_sha256(b'ECDSA is awesome!'), 'big')\n",
     "\n",
     "# parse the der format to get the signature\n",
-    "sig = Signature.parse(der)\n",
     "# parse the sec format to get the public key\n",
-    "point = S256Point.parse(sec)\n",
     "\n",
-    "# use the verify method on S256Point to validate the signature\n",
-    "print(point.verify(z, sig))"
+    "# use the verify method on S256Point to validate the signature"
    ]
   },
   {
